Removing the final modifier and handling case when uri can be null.